Tiny fixes and additions